# europa

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  rustfmt.toml  taplo.toml
.github/workflows/: europa.yml  release.yml
client/api/: Cargo.toml
client/api/src/: lib.rs  statekv.rs
client/basic-authorship/: Cargo.toml
client/basic-authorship/src/: basic_authorship.rs  block_tracing.rs  lib.rs
client/basic-authorship/src/block_tracing/: mod.rs  parser.rs
client/cli/: Cargo.toml
client/cli/src/: config.rs  lib.rs  runner.rs
client/cli/src/commands/: mod.rs  run_cmd.rs  statekv_cmd.rs  workspace_cmd.rs
client/cli/src/params/: import_params.rs  mod.rs  pruning_params.rs  shared_params.rs
client/db/: Cargo.toml
client/db/src/: lib.rs
client/executor/: Cargo.toml
client/executor/src/: lib.rs  native_executor.rs
client/rpc/: Cargo.toml
client/rpc/src/: error.rs  lib.rs
client/service/: Cargo.toml
client/service/src/: builder.rs  builder_ext.rs  config.rs  lib.rs
client/service/src/client/: call_executor.rs  genesis.rs  mod.rs
client/service/src/task_manager/: mod.rs
doc/: basic.md  europa.md
executor/src/: lib.rs
primitives/extensions/: Cargo.toml
primitives/extensions/src/: lib.rs
primitives/io/: Cargo.toml
primitives/io/src/: lib.rs
primitives/sandbox/: Cargo.toml  wasmtime.rs
primitives/sandbox/src/: imp.rs  lib.rs
primitives/sandbox/src/imp/: interpreter.rs  jit.rs  mod.rs  wasmi.rs
primitives/sandbox/src/imp/wasmtime/: env.rs  external.rs  host.rs  imports.rs  instance.rs  memory.rs  mod.rs  util.rs
primitives/sandbox/tests/: mod.rs
primitives/wasm-interface/: Cargo.toml
primitives/wasm-interface/src/: lib.rs
runtime/: Cargo.toml  runtime.rs
runtime/src/: lib.rs
substrate/primitives/api/proc-macro/src/: impl_runtime_apis.rs
