[workspace]
members = [
    #	"bin/europa",
    #	"bin/europa/cli",
    #	"bin/europa/rpc",
    #	"bin/europa/executor",
    #	"bin/europa/runtime",

    "client/api",
    "client/basic-authorship",
    #	"client/cli",
    "client/db",
    "client/executor",
    "client/rpc",
    # "client/service",

    "primitives/io",
    "primitives/extensions",
    #	"primitives/sandbox",
]
exclude = ["vendor/substrate"]
resolver = "2"

[profile.release]
panic = "unwind"

[patch.crates-io]
parity-wasm = { git = "https://github.com/patractlabs/parity-wasm", branch = "v0.42.2" }
