[package]
name = "europa-runtime"
version = "0.1.0"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
serde = { version = "1.0.101", features = ["derive"] }

# Substrate primitives
sp-api = { version = "2.0.0" }
sp-block-builder = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
sp-inherents = { version = "2.0.0" }
sp-io = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-std = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sp-version = { version = "2.0.0" }

# Substrate pallets
frame-executive = { version = "2.0.0" }
frame-support = { version = "2.0.0" }
frame-system = { version = "2.0.0" }
frame-system-rpc-runtime-api = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }
pallet-randomness-collective-flip = { version = "2.0.0" }
pallet-timestamp = { version = "2.0.0" }
pallet-transaction-payment = { version = "2.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0" }
pallet-sudo = { version = "2.0.0" }
