[package]
name = "ec-basic-authorship"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.8"

tracing = "0.1.25"
tracing-subscriber = "0.2.15"
parking_lot = "0.10.0"

prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-proposer-metrics = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }

sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
nom = "6.1.2"

[dev-dependencies]
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
parking_lot = "0.11.1"
hex = "0.4"
