[package]
name = "ec-basic-authorship"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
nom = "6.1.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.15"

# Parity
codec = { package = "parity-scale-codec", version = "3.1" }

# Substrate
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-proposer-metrics = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# Local
ec-client-api = { path = "../api" }

[dev-dependencies]
hex = "0.4"
# Substrate
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
