[package]
name = "ec-cli"
version = "0.2.1"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.4"
chrono = "0.4.10"
regex = "1.3.4"
structopt = "0.3.8"
bytes = "0.5.0"
hex = "0.4.0"
log = "0.4"
fdlimit = "0.2.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.21", features = [ "signal", "rt-core", "rt-threaded", "blocking" ] }

sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-panic-handler = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

ec-service = { path = "../service" }
ec-client-api = { path = "../api" }
