[package]
name = "ec-cli"
version = "0.4.0-dev"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = "0.12"
bytes = "1.1"
chrono = "0.4"
clap = { versino = "3.1", features = ["derive"] }
fdlimit = "0.2.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["signal", "rt-multi-thread"] }

# Substrate
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-panic-handler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# Europa
ec-client-api = { path = "../api" }
ec-service = { path = "../service" }
