[package]
name = "ec-client-db"
version = "0.4.0-dev"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4"

# Parity
kvdb = "0.11.0"
kvdb-rocksdb = "0.15.2"

# Substrate
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21", features = ["with-kvdb-rocksdb", "with-parity-db"] }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }

# Local
ec-client-api = { path = "../api" }
ep-extensions = { path = "../../primitives/extensions" }
