[package]
name = "ec-client-db"
version = "0.4.0-dev"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4"

# Parity
kvdb = "0.11.0"
kvdb-rocksdb = "0.15.2"

# Substrate
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", features = ["rocksdb"] }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# Local
ec-client-api = { path = "../api" }
ep-extensions = { path = "../../primitives/extensions" }
