[package]
name = "ec-executor"
version = "0.2.1"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.0.0" }

sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor-common = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
