[package]
name = "ec-executor"
version = "0.4.0-dev"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4"

# Parity
codec = { package = "parity-scale-codec", version = "3.1" }

# Substrate
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
