[package]
name = "ec-rpc"
version = "0.2.1"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
jsonrpc-core = { version = "15.1.0" }
jsonrpc-core-client = { version = "15.1.0" }
jsonrpc-derive = "15.1.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

ec-client-api = { path = "../api" }
ec-basic-authorship = { path = "../basic-authorship" }
