[package]
name = "ec-rpc"
version = "0.4.0-dev"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parity
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"

# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }

# Local
ec-basic-authorship = { path = "../basic-authorship" }
ec-client-api = { path = "../api" }
