[package]
name = "ec-service"
version = "0.2.1"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
parking_lot = "0.10.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }
tracing = "0.1.22"
exit-future = "0.2.0"
log = "0.4.8"
futures = { version = "0.3.4", features = ["compat"] }
futures01 = { package = "futures", version = "0.1.29" }
jsonrpc-pubsub = "15.0"
jsonrpc-core = "15.0"
serde_json = "1.0"
hex = "0.4.0"

sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }

sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-db = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-server = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-manual-seal = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-basic-authorship = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-informant = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

ec-executor = { path = "../executor" }
ec-client-db = { path = "../db" }
ec-client-api = { path = "../api" }
ec-rpc = { path = "../rpc" }
