[package]
name = "ec-service"
version = "0.4.0-dev"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
exit-future = "0.2"
futures = { version = "0.3", features = ["compat"] }
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4"
log = "0.4"
parking_lot = "0.12"
serde_json = "1.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.15"

# Parity
codec = { package = "parity-scale-codec", version = "3.1" }
jsonrpc-core = "18.0"
jsonrpc-pubsub = "18.0"

# Substrate
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-rpc-server = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }

# Europa
ec-basic-authorship = { path = "../basic-authorship" }
ec-client-api = { path = "../api" }
ec-client-db = { path = "../db" }
ec-executor = { path = "../executor" }
ec-rpc = { path = "../rpc" }
ep-extensions = { path = "../../primitives/extensions" }
