[package]
name = "ep-extensions"
version = "0.4.0-dev"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
