[package]
name = "ep-io"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

[dependencies]
# Substrate primitives
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }

ep-extensions = { path = "../extensions" }

[features]
default = ["std"]
std = []
