[package]
name = "ep-io"
version = "0.4.0-dev"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# Europa
ep-extensions = { path = "../extensions" }

[features]
default = ["std"]
std = []
