[package]
name = "ep-sandbox"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>", "patract labs <https://github.com/patractlabs>"]
edition = "2018"
license = "Apache-2.0"
description = "This crate provides means to instantiate and execute wasm modules."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
patract-wasmi = { package = "wasmi", git = "https://github.com/patractlabs/wasmi", branch = "v0.9.0", optional = true }
wasmi = { version = "0.9", optional = true }
wasmtime = { version = "0.27.0", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.101", features = ["derive"] }

sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-wasm-interface = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
wat = "1.0"
assert_matches = "1.3.0"

[features]
default = [ "std" ]
std = [ "jit"]
jit = [ "wasmtime" ]
interpreter = [ "patract-wasmi", "wasmi" ]
