[package]
name = "ep-sandbox"
version = "0.4.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "Patract Labs <https://github.com/patractlabs>"]
edition = "2021"
license = "Apache-2.0"
description = "This crate provides means to instantiate and execute wasm modules."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasmtime = { version = "0.33.0", optional = true }

# Partiy
codec = { package = "parity-scale-codec", version = "3.1" }
patract-wasmi = { package = "wasmi", git = "https://github.com/patractlabs/wasmi", branch = "v0.9.0", optional = true }
wasmi = { version = "0.9", optional = true }

# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[dev-dependencies]
assert_matches = "1.3.0"
wat = "1.0"

[features]
default = ["std"]
std = ["jit"]
jit = ["wasmtime"]
interpreter = ["patract-wasmi", "wasmi"]
