[package]
name = "ep-wasm-interface"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Types and traits for interfacing between the host and the wasm runtime."
documentation = "https://docs.rs/sp-wasm-interface"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
wasmi = { git = "https://github.com/patractlabs/wasmi", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }

impl-trait-for-tuples = "0.1.2"
sp-std = { git = "https:/github.com/paritytech/substrate", branch = "master" }

[features]
default = [ "wasmi" ]

